objects/OnArrival_360_Events__c.object
<CustomObject>
    <fields>
        <fullName>ATGExternalID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID for migration purposes</inlineHelpText>
        <label>ATGExternalID__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OnArrival 360 Events</relationshipLabel>
        <relationshipName>OnArrival_360_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_of_Event__c</fullName>
        <description>The address the event will be staged.</description>
        <inlineHelpText>The address the event will be staged.</inlineHelpText>
        <label>Address of Event</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dates__c</fullName>
        <description>Duration of event for OA 360</description>
        <inlineHelpText>Duration of event for OA 360</inlineHelpText>
        <label>Dates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Event__c</fullName>
        <description>Event name for OA 360.</description>
        <inlineHelpText>Event name for OA 360.</inlineHelpText>
        <label>Name of Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>How many people will be attending events for OA 360.</description>
        <inlineHelpText>How many people will be attending events for OA 360.</inlineHelpText>
        <label>Number of Attendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Exhibitors__c</fullName>
        <inlineHelpText>Number of Exhibitors for the Event</inlineHelpText>
        <label>Number of Exhibitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>Enter the name of the venue.</description>
        <inlineHelpText>Enter the name of the venue.</inlineHelpText>
        <label>Venue Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <description>Where you can enter event information for OnArrival 360 Events</description>
    <label>OnArrival 360 Event</label>
    <nameField>
        <label>OnArrival 360 Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnArrival 360 Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>